--- a/KineticTypography/Tutorial5/index.html
+++ b/KineticTypography/Tutorial5/index.html
@@ -13,6 +13,11 @@
   </head>
 
   <body>
+    <ul>
+      <li><img src="gogh1.jpg" /></li>
+      <li><img src="gogh2.jpg" /></li>
+      <li><img src="gogh3.jpg" /></li>
+    </ul>
     <script type="module" src="app.js"></script>
   </body>
 </html>
