#doc: style.css to common folder

--- a/MDNpractice/bouncingBall/index.html
+++ b/MDNpractice/bouncingBall/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ID=edge, chrome=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>space</title>
-  <link rel="stylesheet" href="style.css">
+  <title>bouncingball</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <canvas id="canvas" width="600" height="300"></canvas>
